# media-fabric

./: .gitignore  CMakeLists.txt  README.md
SipSubService/cmake/: CMakeLists.txt
SipSubService/conf/: SipSubService.conf  catalog.json
SipSubService/include/: Common.h  ECEventPoll.h  ECSocket.h  Gb28181Session.h  GlobalCtl.h  SipCore.h  SipDef.h  SipDirectory.h  SipGbPlay.h  SipHeartBeat.h  SipLocalConfig.h  SipRecordList.h  SipTaskBase.h
SipSubService/src/: ECEventPoll.cpp  ECSocket.cpp  Gb28181Session.cpp  GlobalCtl.cpp  SipCore.cpp  SipDirectory.cpp  SipGbPlay.cpp  SipHeartBeat.cpp  SipLocalConfig.cpp  SipRecordList.cpp  SipRegister.cpp  SipTaskBase.cpp  main.cpp
SipSupService/cmake/: CMakeLists.txt
SipSupService/conf/: SipSupService.conf  data.ps
SipSupService/include/: Common.h  ECEventPoll.h  ECSocket.h  EventMsgHandle.h  Gb28181Session.h  GetCatalog.h  GetPlamtInfo.h  GetRecordList.h  GlobalCtl.h  OpenStream.h  SipCore.h  SipDef.h  SipDirectory.h  SipGbPlay.h  SipHeartBeat.h  SipLocalConfig.h  SipRecordList.h  SipTaskBase.h  ThreadPool.h  XmlParser.h
SipSupService/include/h26x/: h265_stream.hpp  mpeg4-avc.h  mpeg4-hevc.h
SipSupService/src/: ECEventPoll.cpp  ECSocket.cpp  EventMsgHandle.cpp  Gb28181Session.cpp  GetCatalog.cpp  GetPlamtInfo.cpp  GetRecordList.cpp  GlobalCtl.cpp  OpenStream.cpp  SipCore.cpp  SipDirectory.cpp  SipGbPlay.cpp  SipHeartBeat.cpp  SipLocalConfig.cpp  SipRecordList.cpp  SipRegister.cpp  ThreadPool.cpp  main.cpp
SipSupService/src/h26x/: h264_stream.cpp  h265_stream.cpp  hevc-annexbtomp4.c  mpeg4-annexbtomp4.c
conf/: gb28181-server.conf  media-fabric-sub.conf  media-fabric-sup.conf  media-fabric.conf
docs/: architecture.md  media-flow.md  milestone3-common-inventory.md  milestone4-completion-audit.md  milestone4-node-capabilities.md  milestone6-validation.md  signaling-flow.md  third-party-libs.md  wireshark.md  业务API.md  流媒体开发项目式学习计划.md  迭代计划-Go业务层-C++媒体层-前端.md  阶段0-整理现有项目基础执行计划.md
docs/notes/: README.md  markdown语法库.md  第三方库安装.md
docs/notes/C++和C语法整理/: JsonParse_逐行解析.md  inline.md  pthread线程封装.md  static.md  static_const.md  单例模式.md  头文件.md  定时器_TaskTimer.md  时间获取与格式化.md  智能锁_RAII.md  线程池.md
docs/notes/jrtplib/: H264中NALU_IDR_I帧_P帧_B帧_SPS_PPS整理.md  H264和PS流的区别.md  PTS和DTS的区别.md  RTPSession.md
docs/notes/pjsip/: GB28181心跳_MESSAGE_SipHeartBeat.md  GB28181注册_REGISTER_SipRegister.md  GB28181目录.md  SipTaskBase_业务任务基类.md  XmlParser_XML生成工具_tinyxml2封装.md  invite.md  pjsip初始化_SipCore.md
go/: go.mod
go/cmd/media-fabric/: main.go
go/internal/api/: server.go
go/internal/auth/: auth.go  auth_test.go
go/internal/config/: config.go
go/internal/media/: runtime_cgo.go
go/internal/store/: store.go
notes/: day5.md
notes/C++和C语法整理/: 多路IO复用.md  时间获取与格式化.md  随机数生成_randomNum.md
notes/days/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md
notes/jrtplib/: H264中NALU_IDR_I帧_P帧_B帧_SPS_PPS整理.md  H264和PS流的区别.md  RTPSession.md
notes/pjsip/: GB28181上级心跳处理_MESSAGE_SipSupService.md  GB28181心跳_MESSAGE_SipHeartBeat.md  GB28181注册_REGISTER_SipRegister.md  GB28181目录.md  XmlParser_XML生成工具_tinyxml2封装.md  invite.md  pjsip初始化_SipCore.md
scripts/: build-media-fabric.sh  prepare-jrtplib-linux.sh  verify-milestone4-linux.sh
src/: main.cpp  mfcli.cpp
src/adapters/jrtplib/: JrtplibRtpSessionAdapter.cpp  JrtplibRtpSessionAdapter.h
src/adapters/pjsip/: PjsipStackAdapter.cpp  PjsipStackAdapter.h
src/capabilities/: GB28181Capabilities.cpp  GB28181Capabilities.h  LifecycleCapability.cpp  LifecycleCapability.h  SipTask.h  StandardCapabilities.cpp  StandardCapabilities.h
src/capi/: media_fabric_c_api.cpp  media_fabric_c_api.h
src/common/include/: AutoMutexLock.h  ECEventPoll.h  ECSocket.h  ECThread.h  JsonParse.h  Logger.h  SipDef.h  SipMessage.h  StreamHeader.h  ThreadPool.h
src/common/src/: ECEventPoll.cpp  ECSocket.cpp  ECThread.cpp  Logger.cpp  SipMessage.cpp  ThreadPool.cpp  XmlParser.cpp
src/core/: BusinessQueryService.cpp  BusinessQueryService.h  BusinessState.cpp  BusinessState.h  Capability.h  DigestAuth.cpp  DigestAuth.h  GB28181Node.cpp  GB28181Node.h  ManagementServer.cpp  ManagementServer.h  ManscdpMessage.cpp  ManscdpMessage.h  MediaFabricRuntime.cpp  MediaFabricRuntime.h  NodeConfig.cpp  NodeConfig.h  NodeRuntime.h  PeerRegistry.cpp  PeerRegistry.h  SessionManager.cpp  SessionManager.h  SipEndpoint.h  SipMessageContext.h  SipRequestContext.h  SipStack.cpp  SipStack.h  SipTransport.cpp  SipTransport.h  TaskScheduler.cpp  TaskScheduler.h
src/media/: ElementaryStream.cpp  ElementaryStream.h  MediaFrameSink.cpp  MediaFrameSink.h  MediaManager.cpp  MediaManager.h  ProgramStream.cpp  ProgramStream.h  RtpPacket.cpp  RtpPacket.h  RtpSessionAdapter.cpp  RtpSessionAdapter.h  SdpSession.cpp  SdpSession.h  StreamFileFrameSource.cpp  StreamFileFrameSource.h
tests/: capi_smoke.cpp
